poc/yamls1.4/kube-dashboard/kube-dashboard-deployment.yaml
apiVersion: extensions/v1beta1 
kind: Deployment 
metadata:  
  name: kubernetes-dashboard
  namespace: kube-system  
  labels:  
    k8s-app: kubernetes-dashboard
    version: v1.1.0  
    kubernetes.io/cluster-service: "true"  
spec:  
  replicas: 1  
  selector: 
    matchLabels:  # equality-based selector 
      k8s-app: kubernetes-dashboard  
      version: v1.1.0
  template:  
    metadata:  
      labels:  
        k8s-app: kubernetes-dashboard
        version: v1.1.0
        kubernetes.io/cluster-service: "true"  
    spec:  
      containers:  
      - name: kubernetes-dashboard
        image: google_containers/kubernetes-dashboard-amd64:v1.4.0 
        resources:  
          # keep request = limit to keep this container in guaranteed class  
          limits:  
            cpu: 100m  
            memory: 50Mi
          requests:
            cpu: 100m
            memory: 50Mi  
        ports:  
        - containerPort: 9090 
        args:
       # -  --apiserver-host=http//172.21.12.151:8080
        #-  --apiserver-host=https://172.21.12.151:6443
        livenessProbe:
          httpGet:
            path: /
            port: 9090
